--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,8 @@
    "source": [
     "names_and_ranks = [] \n",
     "for i in range(0,len(city_names)): \n",
-    "    names_and_ranks.append(str(city_indices[i]+1) + \". \" + city_names[i])# write a for loop that adds the properly formatted string to the names_and_ranks list"
+    "    names_and_ranks.append(str(city_indices[i]+1) + \". \" + city_names[i])# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
+    "    "
    ]
   },
   {
